--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,8 +23,9 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-family: 'Nunito', sans-serif;
+    font-family: "Rubik","Arial",sans-serif;
     font-size: 1.1rem;
-    background: $background;;
+    background: $background;
     color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -113,14 +114,23 @@ body {
         }
 
         .banner-content {
-            margin: auto;
             padding-bottom: 2rem;
-            width: 90%;
+            width: 92%;
+            margin: auto;
 
-
-            .banner-content-subheading {
-                opacity: 0.8;
+            h1 {
+                margin-top: 2rem;
+                font-size: 2rem;
                 font-weight: 400;
+            }
+
+            h4 {
+                font-size: 1.25rem;
+                font-weight: 300;
+                
+                &.banner-content-subheading {
+                    opacity: 0.8;
+                }
             }
         }
     }
